# miapr

./: laba1.py  pyproject.toml
lab2/: algo.py  algo_scd.py
laba1/: laba1.py
laba2/: config.py  lab2.py
laba3/: laba3.py
laba4/: laba4.py
laba5/: drawer.py  laba5.py  main.py
laba6/: drawer.py  hierarchi.py  laba6.py  main.py
laba7/: Lab7.sln
laba7/Syntax/: NotTerminals.cs
Лаба8/Lab7/: MainWindow.xaml  MainWindow.xaml.cs
Лаба9/Lab9/WpfProject/: MainWindow.xaml  MainWindow.xaml.cs
