[tool.poetry]
name = "miapr1"
version = "0.0.0"
description = "miapr laba 1 KMeans method"
authors = ["Your Name <you@example.com>"]
license = "-"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "^1.25.2"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
